# dales

./: .gitignore  .gitmodules  .travis.yml  .zenodo.json  CHANGELOG.md  CMakeLists.org  CMakeLists.txt  INSTALL  INSTALL.md  README.md  README_nh3.md  _v03_DALES non-periodic BCs instructions.docx  _v04_DALES split-flux instructions.docx  _v05_DALES percentage-chemistry instructions.docx  cmake_install.cmake  dales-4.1-fix.patch  dales4_script.sh  findnetcdf  modgenstat.f90  program.f90  requirements.txt  tags
.github/workflows/: compile.yml  openacc.yml  precision.yml  test.yml
Data_processing_scripts/: Analysis_DALESarea.m  Analysis_DALESdomain.m  Analysis_DALESreceptor.m  DALES_ProcessOutput.m  DALESmodinput.m  f__DALESread.m
Example_input/001_meteo_spinup/: DALES_ProcessOutput001.m  matlab_runscript.slurm  namoptions.001  runscript.slurm  surface.interactive.inp.001
Example_input/002_analysis/: DALES_ProcessOutput002.m  baseprof.inp.002  lscale.inp.002  matlab_runscript.slurm  namoptions.002  prof.inp.002  runscript.slurm  scalar.inp.002  surface.interactive.inp.002
cases/10str/: backrad.inp.000.nc  job.000  namoptions.000  prof.inp.000
cases/3D_radiation/: readme
cases/3D_radiation/10str/: job.001  lscale.inp.001  namoptions.001  scalar.inp.001
cases/3D_radiation/10str_smooth/: job.003  namoptions.003
cases/3D_radiation/rrtmg/: job.002  lscale.inp.002  namoptions.002
cases/3D_radiation/rrtmg_clear/: job.005  namoptions.005  prof.inp.005
cases/3D_radiation/rrtmg_smooth/: backrad.inp.004.nc  job.004  namoptions.004  scalar.inp.004
cases/ACP_2020_xpb/: README  backrad.inp.720.nc  job.718  job.719  job.720  job.726  job.728  ls_flux.inp.718  ls_flux.inp.719  ls_fluxsv.inp.719  lscale.inp.718  lscale.inp.720  lscale.inp.726  namoptions.718  namoptions.719  namoptions.720  namoptions.726  namoptions.728  prof.inp.718  prof.inp.719  prof.inp.728  scalar.inp.718
cases/GOAMAZON14/: README
cases/GO_AMAZON_canopy/: README  job.461  jobp.436  jobp.447  jobp.451  lscale.inp.436  lscale.inp.447  namoptions.436  namoptions.447  namoptions.451  namoptions.461  prof.inp.436  prof.inp.451  scalar.inp.436  scalar.inp.447
cases/JHM_2017_xpb/: README  errorfile.473  errorfile.474  errorfile.478  errorfile.479  errorfile.482  errorfile.483  job.473  job.474  job.478  job.479  job.482  job.483  lscale.inp.478  namoptions.473  namoptions.474  namoptions.478  namoptions.479  namoptions.482  namoptions.483  prof.inp.483
cases/aerosolrad/input/: README  job.104  lscale.inp.104  namoptions.104  prof.inp.104  scalar.inp.104
cases/aerosolrad/output/: baseprof.inp.104  field.104  flux1.104  flux2.104  moments.104  output.104  radsplitstat.104  radstat.104  sv001fld.104  sv001flx.104  tmlsm.104  tmser1.104  tmsurf.104
cases/arm_brown/: namoptions.001  prof.inp.ARM_dz20  prof.inp.ARM_dz40  readme.arm_brown
cases/arm_unstable/: namoptions.001  readme.arm_unstable
cases/atex/: namoptions.001
cases/ballistic/: initfiles_ballistic.xls  lscale.inp.001  moduser.f90  namoptions.001  prof.inp.001  scalar.inp.001
cases/benchmark/: README.md
cases/bomex/: namoptions.001
cases/botany/: README.txt  backrad.inp.001.nc  baseprof.inp.001  lscale.inp.001  namoptions-1536.001  namoptions.001  nudge.inp.001  prof.inp.001  scalar.inp.001
cases/cblstrong/: namoptions.001
cases/cblweak/: namoptions.001
cases/dycoms_rf02/: namoptions.001
cases/example/: namoptions.001  namoptions.lsm  namoptions.lsmrad
cases/fog/: namoptions.001
cases/gabls1/: namoptions.001
cases/heterogen/: namoptions.841  namoptions.941  surface.inp.841  surface.prescribed.inp.841
cases/hireslapse/: .gitignore  namoptions.001
cases/ibm/: baseprof.inp.005  ibm.inp.005  job.005  lscale.inp.005  namoptions.005  prof.inp.005  scalar.inp.005  sv_local_fluxes.inp.005
cases/m7/: namoptions.001
cases/neutral/: namoptions.001
cases/rico/: initfiles_rico_125.xls  moduser.f90  namoptions.001
cases/smoke/: namoptions.001
cases/standard/: moduser.f90
cases/testbed/: moduser.f90
config/: archlinux.cmake  blizzard.cmake  cheopsgcc.cmake  cheopsintel.cmake  cheopsintel_localnetcdf.cmake  default.cmake  default.cmake~  defaultgcc.cmake  defaultintel.cmake  doxygen.conf.in  fedora.cmake  juropa.cmake  oakley.cmake  osx.cmake  ruby.cmake  supermuc.cmake  thunder.cmake  thunder.cmake.orig  ubuntu.cmake
data/: depac_landuse_parameters.nc  tracerdata.inp
src/: .modsurface.f90.swp  AGScross.f90  CMakeLists.txt  __old_modbulkmicro.f90  advec_2nd.f90  advec_52.f90  advec_5th.f90  advec_62.f90  advec_6th.f90  advec_hybrid.f90  advec_hybrid_f.f90  advec_kappa.f90  advec_kappa_f.f90  advec_upw.f90  advec_weno.f90  advection.f90  daleslib.f90  depac_lu.inc  fftnew.f90  git-version.cmake  go.f90  le.inc  le_drydepos_gas_depac.f90  mod3dheatingdump.F90  modAGScross.f90  modadvection.f90  modaerosol_t.f90  modaerosoldata.f90  modaerosolmicro.f90  modboundary.f90  modbudget.f90  modbulkmicro.f90  modbulkmicro3.f90  modbulkmicro3_column.f90  modbulkmicro3_point.f90  modbulkmicro_aerosol.f90  modbulkmicrostat.f90  modbulkmicrostat3.f90  modcandump.f90  modcanopy.f90  (+172 more)
src/addon/: advec_5th.f90  filter.f90  modbudget.f90  modbulkmicro.f90  modbulkmicrostat.f90  modbulkmicrostat.old  modchecksim.debug  modchecksim.f90  modchem.f90  modchem.old  modcloudfield.f90  modcrosssection.f90  modfielddump.f90  modgenstat.f90  modgenstat.old  modheterostats.f90  modheterostats.old  modnetcdfmovie.f90  modnetcdfstats.f90  modnofftw.f90  modnohypre.f90  modnudge.f90  modnudge.old  modparticles.f90  modprojection.f90  modradstat.f90  modsampling.f90  modsampling.old  modstattend.f90  modstress.f90  modtilt.f90  modtimestat.f90  modtimestat.old  program.debug
src/test/: test_transposes.f90
tests/: README.md  conftest.py  test_bomex.py  test_run.py
tuner/: advection.py  thermo.f90  thermo.py  tune_advection.py  tune_thermo.py
tuner/kernels/: advection_2nd.f90  thermo.f90
utils/: cdo_gather_crossxy_var  cdo_gather_crossyz_var  cdo_gather_field_var  convert_input.py
utils/makedepf90-2.8.8/: .depend  Makefile  config.status
(+267 files in other folders)
